Fixed issue where principaldetails was not showing all roles assigned, also fixed up the page template
git-svn-id: svn://svn.zope.org/repos/main@83638 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3c.securitytool/trunk/src/z3c/securitytool/browser/securitytool.css
+++ b/z3c.securitytool/trunk/src/z3c/securitytool/browser/securitytool.css
@@ -112,6 +112,10 @@ table th a:visited {
     margin-left: 3em;
 }
 
+.contentRoleList {
+    margin-left: 4em;
+}
+
 .legend {
    font-style: italic;
    /*margin-left: 25px;*/
